--- a/icons/icomoon/style.css
+++ b/icons/icomoon/style.css
@@ -86,7 +86,7 @@
   content: "\e901";
 }
 .icon-Dribbble:before {
-  content: "\e902";
+  content: "\f08c";
 }
 .icon-FaceBook:before {
   content: "\e903";
